--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ authors = ["Brandon Braner <brandon.braner@gmail.com>"]
 python = "^3.10"
 fastapi = "^0.79.0"
 uvicorn = "^0.18.2"
-psycopg2-binary = "^2.9.3"
 asyncpg = "^0.26.0"
 SQLAlchemy = "^1.4.39"
 alembic = "^1.8.1"
 gunicorn = "^20.1.0"
+psycopg = "^3.0.15"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
