--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,10 @@ pytest = "^7.1.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 140
+target-version = ['py310']
+
+[tool.pycln]
+all = true
