MES-23 fix ci file

--- a/.github/workflows/develop-ci.yaml
+++ b/.github/workflows/develop-ci.yaml
@@ -21,11 +21,11 @@ jobs:
   push-to-gcr:
     runs-on: ubuntu-latest
     steps:
-      uses: raccoondev/push-docker-gcr
-      with:
-        gcr_host: gcr.io
-        image_name: message-relay
-        image_tag: latest
-        env:
-          GCLOUD_SERVICE_KEY: ${{ secrets.DEV_GCLOUD_SERVICE_KEY }}
-          GOOGLE_PROJECT_ID: ${{ secrets.DEV_GOOGLE_PROJECT_ID }}
+      - uses: raccoondev/push-docker-gcr
+        with:
+          gcr_host: gcr.io
+          image_name: message-relay
+          image_tag: latest
+          env:
+            GCLOUD_SERVICE_KEY: ${{ secrets.DEV_GCLOUD_SERVICE_KEY }}
+            GOOGLE_PROJECT_ID: ${{ secrets.DEV_GOOGLE_PROJECT_ID }}
