--- a/.github/workflows/develop-ci.yaml
+++ b/.github/workflows/develop-ci.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: pre-commit/action@v3.0.0
 
   build-and-push-to-gcr:
+    needs: pre-commit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
