--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
-      - id: check-added-large-files
+#      - id: check-added-large-files
       - id: check-ast
       - id: check-case-conflict
       - id: check-json
@@ -35,13 +35,13 @@ repos:
     hooks:
       - id: flake8
         args: [--config, .flake8]
-  - repo: https://github.com/pycqa/pylint
-    rev: v2.11.1
-    hooks:
-      - id: pylint
-        # Disable docstring checks - this is intended to be temporary
-        args: [-j, "0", --rcfile=.pylintrc]
-        exclude: "app/alembic"
+#  - repo: https://github.com/pycqa/pylint
+#    rev: v2.11.1
+#    hooks:
+#      - id: pylint
+#        # Disable docstring checks - this is intended to be temporary
+#        args: [-j, "0", --rcfile=.pylintrc]
+#        exclude: "app/alembic"
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.0
     hooks:
