--- a/.github/workflows/develop-ci.yaml
+++ b/.github/workflows/develop-ci.yaml
@@ -18,17 +18,17 @@ jobs:
           python-version: ~3.10.5
       - uses: pre-commit/action@v3.0.0
 
-  build-and-push-to-gcr:
-    needs: pre-commit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: RafikFarhad/push-to-gcr-github-action@v4.1
-        with:
-          gcloud_service_key: ${{ secrets.DEV_GCLOUD_SERVICE_KEY }} # can be base64 encoded or plain text
-          registry: gcr.io
-          project_id: message-relay-dev
-          image_name: message-relay
-          image_tag: latest
-          dockerfile: Dockerfile
-          context: .
+#  build-and-push-to-gcr:
+#    needs: pre-commit
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: RafikFarhad/push-to-gcr-github-action@v4.1
+#        with:
+#          gcloud_service_key: ${{ secrets.DEV_GCLOUD_SERVICE_KEY }} # can be base64 encoded or plain text
+#          registry: gcr.io
+#          project_id: message-relay-dev
+#          image_name: message-relay
+#          image_tag: latest
+#          dockerfile: Dockerfile
+#          context: .
